modified to ROS2 version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,89 +1,75 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.8)
 project(fast_lio)
-
-SET(CMAKE_BUILD_TYPE "Debug")
-
-ADD_COMPILE_OPTIONS(-std=c++14 )
-ADD_COMPILE_OPTIONS(-std=c++14 )
-set( CMAKE_CXX_FLAGS "-std=c++14 -O3" )
-
-add_definitions(-DROOT_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/\")
-
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fexceptions" )
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -std=c++0x -std=c++14 -fexceptions")
+
+if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    add_compile_options(-Wall -Wextra -Wpedantic -O3)
+endif ()
 
 message("Current CPU archtecture: ${CMAKE_SYSTEM_PROCESSOR}")
-if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)" )
-  include(ProcessorCount)
-  ProcessorCount(N)
-  message("Processer number:  ${N}")
-  if(N GREATER 4)
-    add_definitions(-DMP_EN)
-    add_definitions(-DMP_PROC_NUM=3)
-    message("core for MP: 3")
-  elseif(N GREATER 3)
-    add_definitions(-DMP_EN)
-    add_definitions(-DMP_PROC_NUM=2)
-    message("core for MP: 2")
-  else()
+if (CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
+    include(ProcessorCount)
+    ProcessorCount(N)
+    message("Processer number:  ${N}")
+    if (N GREATER 4)
+        add_definitions(-DMP_EN)
+        add_definitions(-DMP_PROC_NUM=3)
+        message("core for MP: 3")
+    elseif (N GREATER 3)
+        add_definitions(-DMP_EN)
+        add_definitions(-DMP_PROC_NUM=2)
+        message("core for MP: 2")
+    else ()
+        add_definitions(-DMP_PROC_NUM=1)
+    endif ()
+else ()
     add_definitions(-DMP_PROC_NUM=1)
-  endif()
-else()
-  add_definitions(-DMP_PROC_NUM=1)
-endif()
+endif ()
 
 find_package(OpenMP QUIET)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}   ${OpenMP_C_FLAGS}")
 
-find_package(PythonLibs REQUIRED)
-find_path(MATPLOTLIB_CPP_INCLUDE_DIRS "matplotlibcpp.h")
+# find dependencies
+find_package(ament_cmake REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(fast_lio REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(pcl_ros REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(livox_ros_driver2 REQUIRED)
 
-find_package(catkin REQUIRED COMPONENTS
-  geometry_msgs
-  nav_msgs
-  sensor_msgs
-  roscpp
-  rospy
-  std_msgs
-  pcl_ros
-  tf
-  livox_ros_driver
-  message_generation
-  eigen_conversions
-)
-
-find_package(Eigen3 REQUIRED)
-find_package(PCL 1.8 REQUIRED)
-
-message(Eigen: ${EIGEN3_INCLUDE_DIR})
-
-include_directories(
-	${catkin_INCLUDE_DIRS} 
-  ${EIGEN3_INCLUDE_DIR}
-  ${PCL_INCLUDE_DIRS}
-  ${PYTHON_INCLUDE_DIRS}
-  include)
-
-add_message_files(
-  FILES
-  Pose6D.msg
-)
-
-generate_messages(
- DEPENDENCIES
- geometry_msgs
-)
-
-catkin_package(
-  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs message_runtime
-  DEPENDS EIGEN3 PCL
-  INCLUDE_DIRS
-)
-
-add_executable(fastlio_mapping src/laserMapping.cpp include/ikd-Tree/ikd_Tree.cpp src/preprocess.cpp)
-target_link_libraries(fastlio_mapping ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES})
-target_include_directories(fastlio_mapping PRIVATE ${PYTHON_INCLUDE_DIRS})
+rosidl_generate_interfaces(${PROJECT_NAME}
+        "msg/Pose6D.msg"
+        "msg/Test.msg"
+        DEPENDENCIES builtin_interfaces
+        LIBRARY_NAME ${PROJECT_NAME}
+        )
+if (BUILD_TESTING)
+    find_package(ament_lint_auto REQUIRED)
+    # the following line skips the linter which checks for copyrights
+    # comment the line when a copyright and license is added to all source files
+    set(ament_cmake_copyright_FOUND TRUE)
+    # the following line skips cpplint (only works in a git repo)
+    # comment the line when this package is in a git repo and when
+    # a copyright and license is added to all source files
+    set(ament_cmake_cpplint_FOUND TRUE)
+    ament_lint_auto_find_test_dependencies()
+endif ()
+include_directories(${EIGEN3_INCLUDE_DIRS} include)
+link_directories(lib/${PROJECT_NAME})
+add_library(IMU_Processing src/IMU_Processing.cpp include/use-ikfom.cpp)
+add_executable(${PROJECT_NAME}_node src/Fast_Lio.cpp src/fast_lio_node.cpp src/Preprocess.cpp include/ikd-Tree/ikd_Tree.cpp)
+ament_target_dependencies(${PROJECT_NAME}_node rclcpp sensor_msgs pcl_ros tf2 nav_msgs geometry_msgs builtin_interfaces  fast_lio livox_ros_driver2)
+ament_target_dependencies(IMU_Processing rclcpp sensor_msgs pcl_ros tf2 nav_msgs geometry_msgs builtin_interfaces  fast_lio livox_ros_driver2)
+target_link_libraries(${PROJECT_NAME}_node IMU_Processing)
+install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY rviz DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
+install(TARGETS ${PROJECT_NAME}_node DESTINATION lib/${PROJECT_NAME})
+install(TARGETS IMU_Processing DESTINATION lib)
+ament_package()
