--- a/package.xml
+++ b/package.xml
@@ -1,47 +1,29 @@
 <?xml version="1.0"?>
-<package>
-  <name>fast_lio</name>
-  <version>0.0.0</version>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
+    <name>fast_lio</name>
+    <version>0.0.0</version>
+    <description>TODO: Package description</description>
+    <maintainer email="fakesoulde@gmail.com">soulde</maintainer>
+    <license>TODO: License declaration</license>
 
-  <description>
-    This is a modified version of LOAM which is original algorithm
-    is described in the following paper:
-    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
-      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
-  </description>
+    <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <maintainer email="dev@livoxtech.com">claydergc</maintainer>
+    <depend>geometry_msgs</depend>
+    <depend>nav_msgs</depend>
+    <depend>rclcpp</depend>
+    <depend>std_msgs</depend>
+    <depend>pcl_ros</depend>
+    <depend>tf2</depend>
+    <build_depend>rosidl_default_generators</build_depend>
 
-  <license>BSD</license>
+    <exec_depend>rosidl_default_runtime</exec_depend>
 
-  <author email="zhangji@cmu.edu">Ji Zhang</author>
-  
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>livox_ros_driver</build_depend>
-  <build_depend>message_generation</build_depend>
+    <member_of_group>rosidl_interface_packages</member_of_group>
+    <test_depend>ament_lint_auto</test_depend>
+    <test_depend>ament_lint_common</test_depend>
 
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>livox_ros_driver</run_depend>
-  <run_depend>message_runtime</run_depend>
-
-  <test_depend>rostest</test_depend>
-  <test_depend>rosbag</test_depend>
-
-  <export>
-  </export>
+    <export>
+        <build_type>ament_cmake</build_type>
+    </export>
 </package>
