fix "remove pose6d msg but forgot to delete include line"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,13 +35,12 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}   ${OpenMP_C_FLAGS}")
 find_package(ament_cmake REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
-find_package(fast_lio REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(pcl_ros REQUIRED)
 find_package(tf2 REQUIRED)
-find_package(builtin_interfaces REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
+#find_package(builtin_interfaces REQUIRED)
+#find_package(rosidl_default_generators REQUIRED)
 find_package(livox_ros_driver2 REQUIRED)
 
 if (BUILD_TESTING)
@@ -59,8 +58,8 @@ include_directories(${EIGEN3_INCLUDE_DIRS} include)
 link_directories(lib/${PROJECT_NAME})
 add_library(IMU_Processing src/IMU_Processing.cpp include/use-ikfom.cpp)
 add_executable(${PROJECT_NAME}_node src/Fast_Lio.cpp src/fast_lio_node.cpp src/Preprocess.cpp include/ikd-Tree/ikd_Tree.cpp)
-ament_target_dependencies(${PROJECT_NAME}_node rclcpp sensor_msgs pcl_ros tf2 nav_msgs geometry_msgs builtin_interfaces  fast_lio livox_ros_driver2)
-ament_target_dependencies(IMU_Processing rclcpp sensor_msgs pcl_ros tf2 nav_msgs geometry_msgs builtin_interfaces  fast_lio livox_ros_driver2)
+ament_target_dependencies(${PROJECT_NAME}_node rclcpp sensor_msgs pcl_ros tf2 nav_msgs geometry_msgs livox_ros_driver2)
+ament_target_dependencies(IMU_Processing rclcpp sensor_msgs pcl_ros tf2 nav_msgs geometry_msgs  livox_ros_driver2)
 target_link_libraries(${PROJECT_NAME}_node IMU_Processing)
 install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
 install(DIRECTORY rviz DESTINATION share/${PROJECT_NAME})
